--- a/pages/transaksi.html
+++ b/pages/transaksi.html
@@ -29,49 +29,8 @@
             <h1>Transaksi</h1>
           </div>
 
-          <div class="section-body">
-            <div class="row justify-content-md-center">
-              <div class="col-lg-8 col-md-12">
-                <div class="card card-primary">
-                  <div class="card-body">
-                    <ul class="list-unstyled list-unstyled-border list-unstyled-noborder">
-                      <li class="media">
-                        <div class="media-body">
-                          <span class="float-left mr-2">02 Mar 2021</span>
-                          <span class="badge badge-light"> Selesai</span>
-                        </div>
-                      </li>
-                      <li class="media">
-                        <div class="media-body">
-                          <div class="media-title mt-2"><a href="#">INV #6546</a></div>
-                          <div class="text-job text-muted"></div>
-                        </div>
-                        <div class="media-progressbar">
-                          <div class="text-job text-muted text-center">Total</div>   
-                          <div class="media-title text-center"><span class="badge badge-secondary">Rp 350.000</span></div>                       
-                        </div>
-                        <div class="media-progressbar">
-                          <div class="text-job text-muted text-center">Tagihan</div>   
-                          <div class="media-title text-center"><span class="badge badge-danger">Rp 0</span></div>                       
-                        </div>
-                      </li>
-                      <div class="mb-2"><strong><a href="#"><i class="fas fa-store"></i> Zona Karikatur</a></strong></div>
-                      <li class="media">
-                        <img alt="image" class="rounded" width="60" src="/assets/img/products/product-3-50.png">
-                        <div class="media-body col-12">
-                          <div class="media-title"><a href="#">Karikatur Full Body</a></div>
-                          <div class="text-time">2 Pcs (1.200 gr)</div> 
-                          <div class="buttons mt-2">
-                            <a href="#" class="btn btn-primary">Pesan Lagi</a>
-                            <a href="#" class="btn btn-outline-info">Detail</a>
-                          </div>
-                        </div>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
+          <div class="section-body" id="data-order">
+            
           </div>
         </section>
       </div>
@@ -90,7 +49,8 @@
   <!-- JS Libraies -->
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw==" crossorigin="anonymous"></script>
+  
   <!-- Page Specific JS File -->
   <script src="/assets/js/custom-page/transaksi.js" type="module"></script>
 
