--- a/pages/invoice.html
+++ b/pages/invoice.html
@@ -64,8 +64,9 @@
                   </div>
                 </div>
 
-                <div class="row" id="biaya-tambahan">
-                  <div class="col-md-12">
+                <div class="row">
+                  <div class="col-md-6 col-sm-12"></div>
+                  <div class="col-md-6 col-sm-12" id="biaya-tambahan">
                     <div class="section-title">Biaya Tambahan</div>
                     <div class="table-responsive">
                       <table class="table table-striped table-hover table-md">
@@ -73,7 +74,6 @@
                           <tr>
                             <th data-width="40">#</th>
                             <th>Item</th>
-                            <th class="text-center">Jumlah</th>
                             <th class="text-center">Berat <small>(gram)</small></th>
                             <th class="text-right">Total</th>
                           </tr>
