--- a/pages/pesanan.html
+++ b/pages/pesanan.html
@@ -98,70 +98,30 @@
                   <div class="col-lg-6 col-md-12" id="info-pengiriman"></div>
                   <div class="col-lg-6 col-md-12" id="info-pembayaran">
                     <div class="section-title">Pembayaran 
-                      <button class="btn btn-sm btn-primary btn-icon icon-left float-right" data-toggle="modal" data-target="#modal-tambah-pembayaran">
-                        <i class="fas fa-plus"></i> Bukti
+                      <button class="btn btn-sm btn-primary btn-icon icon-left float-right el-show" data-toggle="modal" data-target="#modal-pembayaran">
+                        <i class="fas fa-plus"></i> Input
                       </button>
                     </div>
                     <div class="table-responsive">
                       <table class="table table-striped table-hover table-md">
-                        <tr>
-                          <th>Tgl Pembayaran</th>
-                          <th class="text-center">Nominal</th>
-                          <th class="text-center">Bukti</th>
-                          <th class="text-center">Status</th>
-                        </tr>
-                        <tr>
-                          <td>03 Mar 2021</td>
-                          <td class="text-center">Rp 350.000</td>
-                          <td class="text-center"><img alt="image" src="/assets/img/products/product-3-50.png" class="rounded" width="35"></td>
-                          <td class="text-center">Sdh Dikonfirmasi</td>
-                        </tr>
-                        <tr>
-                          <td>07 Mar 2021</td>
-                          <td class="text-center">Rp 50.000</td>
-                          <td class="text-center"><img alt="image" src="/assets/img/products/product-3-50.png" class="rounded" width="35"></td>
-                          <td class="text-center">Sdh Dikonfirmasi</td>
-                        </tr>
+                        <thead>
+                          <tr>
+                            <th>Tgl Pembayaran</th>
+                            <th class="text-center">Nominal</th>
+                            <th class="text-center">Bukti</th>
+                            <th class="text-center">Status</th>
+                          </tr>
+                        </thead>
+                        <tbody id="data-pembayaran"></tbody>
                       </table>
                     </div>
                   </div>
                 </div>
-
               </div>
+              <div class="text-md-right" id="btn-cancel"></div>
             </div>
           </div>
         </section>
-
-        <div class="modal fade" tabindex="-1" role="dialog" id="modal-tambah-pembayaran">
-          <div class="modal-dialog" role="document">
-            <form>
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title">Kirim Bukti Pembayaran</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  <div class="form-row">
-                    <div class="form-group col-12">
-                      <label class="col-form-label text-md-right">Nominal</label>
-                        <input type="text" class="form-control currency" id="nominal" value="0">
-                    </div>
-                    <div class="form-group col-12">
-                      <label class="col-form-label text-md-right">Bukti Pembayaran</label>
-                      <input type="file" class="form-control" id="bukti" />
-                    </div>
-                  </div>
-                </div>
-                <div class="modal-footer bg-whitesmoke br">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Batal</button>
-                  <button type="button" class="btn btn-primary" onclick="tambahPembayaran()">Kirim</button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
 
       </div>
       <footer-element class="main-footer"></footer-element>
@@ -180,6 +140,7 @@
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="/node_modules/cleave.js/dist/cleave.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw==" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/lightgallery@1.10.0/dist/js/lightgallery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/lightgallery@1.6.12/modules/lg-fullscreen.min.js"></script>
