--- a/pages/toko/detail-pesanan.html
+++ b/pages/toko/detail-pesanan.html
@@ -78,9 +78,14 @@
                   </div>
                 </div>
 
-                <div class="row" id="biaya-tambahan">
-                  <div class="col-md-12">
-                    <div class="section-title">Biaya Tambahan</div>
+                <div class="row">
+                  <div class="col-sm-12 col-md-6"></div>
+                  <div class="col-sm-12 col-md-6" id="biaya-tambahan">
+                    <div class="section-title">Biaya Tambahan
+                      <button class="btn btn-sm btn-primary btn-icon icon-left float-right el-show" data-toggle="modal" data-target="#modal-tambahan">
+                        <i class="fas fa-plus"></i>Input
+                      </button>
+                    </div>
                     <div class="table-responsive">
                       <table class="table table-striped table-hover table-md">
                         <thead>
@@ -89,6 +94,7 @@
                             <th>Item</th>
                             <th class="text-center">Berat <small>(gram)</small></th>
                             <th class="text-right">Total</th>
+                            <th></th>
                           </tr>
                         </thead>
                         <tbody id="info-tambahan"></tbody>
@@ -113,6 +119,7 @@
                             <th class="text-right"></th>
                           </tr>
                         </thead>
+                        <tbody id="data-pembayaran"></tbody>
                       </table>
                     </div>
                   </div>
@@ -138,6 +145,7 @@
   <!-- JS Libraies -->
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+  <script src="/node_modules/cleave.js/dist/cleave.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw==" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/lightgallery@1.10.0/dist/js/lightgallery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/lightgallery@1.6.12/modules/lg-fullscreen.min.js"></script>
@@ -145,6 +153,9 @@
   <script src="https://cdn.jsdelivr.net/npm/lightgallery@1.10.0/modules/lg-pager.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/lightgallery@1.6.12/modules/lg-thumbnail.min.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.2.1/jszip.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip-utils/0.1.0/jszip-utils.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"></script>
 
   <!-- Template JS File -->
   <script src="/assets/js/scripts.js"></script>
