--- a/pages/produk.html
+++ b/pages/produk.html
@@ -12,6 +12,7 @@
   <!-- CSS Libraries -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightgallery@1.6.12/dist/css/lightgallery.min.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="/node_modules/select2/dist/css/select2.min.css">
   <link rel="stylesheet" href="/node_modules/dropzone/dist/min/dropzone.min.css">
 
   <!-- Template CSS -->
@@ -48,8 +49,9 @@
               </div>
               <div class="col-md-6 mt-3">
                 <div class="ml-3" id="info-produk"></div>
+                <a href="#" class="btn btn-block btn-lg btn-primary" onclick="showForm()">Buat Pesanan</a>
 
-                <div class="row">
+                <div class="row mt-4">
                   <div class="col-12 col-md-12">
                     <div class="card profile-widget">
                       <div class="profile-widget-header">
@@ -67,7 +69,6 @@
                     </div>
                   </div>
                 </div>
-                <a href="#" class="btn btn-block btn-lg btn-primary" onclick="showForm()">Buat Pesan</a>
               </div>
             </div>
             
@@ -90,14 +91,16 @@
               </div>
             </div>
 
-            <div class="row justify-content-md-center" id="form-pemesanan"></div>
+            <div class="row justify-content-md-center" id="form-pemesanan" style="display: none;"></div>
+            <div class="row justify-content-md-center" id="form-pengiriman" style="display: none;"></div>
 
-            <div class="row justify-content-md-center" id="total-payment" style="display: none;">
+
+            <div class="row justify-content-md-center" id="card-total-payment" style="display: none;">
               <div class="col-12 col-md-6 col-sm-12 d-flex justify-content-center">
                 <div class="alert alert-light alert-has-icon shadow p-3 mb-5 bg-white rounded mw-100" style="position: fixed; bottom: -30px;">
                   <div class="alert-body">
-                    <div class="alert-title">Total Belanja: Rp 1.150.000 <small class="float-right"></small></div>
-                    <button class="btn btn-block btn-primary">Pesan Sekarang</button>
+                    <div class="alert-title">Total Belanja: Rp <span class="rupiah" id="total-payment"></span></div>
+                    <button class="btn btn-block btn-primary" onclick="checkout()">Pesan Sekarang</button>
                   </div>
                 </div>
               </div>
@@ -125,6 +128,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.min.js"></script>
   <script src="/node_modules/cleave.js/dist/cleave.min.js"></script>
   <script src="/node_modules/dropzone/dist/min/dropzone.min.js"></script>
+  <script src="/node_modules/select2/dist/js/select2.full.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw==" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/lightgallery@1.10.0/dist/js/lightgallery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/lightgallery@1.6.12/modules/lg-fullscreen.min.js"></script>
