Finishing All Function

--- a/pages/produk.html
+++ b/pages/produk.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-  <title>Blank &mdash; ZonArt</title>
+  <title>- &mdash; ZonArt</title>
 
   <!-- General CSS Files -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -99,7 +99,7 @@
               <div class="col-12 col-md-6 col-sm-12 d-flex justify-content-center">
                 <div class="alert alert-light alert-has-icon shadow p-3 mb-5 bg-white rounded mw-100" style="position: fixed; bottom: -30px;">
                   <div class="alert-body">
-                    <div class="alert-title">Total Belanja: Rp <span class="rupiah" id="total-payment"></span></div>
+                    <div class="alert-title">Total Belanja: Rp <span id="total-payment"></span> <span id="total-berat"></span></div>
                     <button class="btn btn-block btn-primary" onclick="checkout()">Pesan Sekarang</button>
                   </div>
                 </div>
