--- a/pages/produk.html
+++ b/pages/produk.html
@@ -49,7 +49,7 @@
               </div>
               <div class="col-md-6 mt-3">
                 <div class="ml-3" id="info-produk"></div>
-                <a href="#" class="btn btn-block btn-lg btn-primary" onclick="showForm()">Buat Pesanan</a>
+                <a href="#" class="btn btn-block btn-lg btn-primary" id="btn-form-order" onclick="showForm()">Buat Pesanan</a>
 
                 <div class="row mt-4">
                   <div class="col-12 col-md-12">
@@ -100,7 +100,7 @@
                 <div class="alert alert-light alert-has-icon shadow p-3 mb-5 bg-white rounded mw-100" style="position: fixed; bottom: -30px;">
                   <div class="alert-body">
                     <div class="alert-title">Total Belanja: Rp <span id="total-payment"></span> <span id="total-berat"></span></div>
-                    <button class="btn btn-block btn-primary" onclick="checkout()">Pesan Sekarang</button>
+                    <button class="btn btn-block btn-primary" id="btn-checkout" onclick="checkout()">Pesan Sekarang</button>
                   </div>
                 </div>
               </div>
