--- a/pages/toko/produk-create.html
+++ b/pages/toko/produk-create.html
@@ -112,7 +112,7 @@
                       <div class="col-sm-12 col-md-7">
                         <div id="image-preview" class="image-preview">
                           <label id="image-label">Pilih File</label>
-                          <input type="file" name="image" id="foto" />
+                          <input type="file" name="image" id="foto" accept="image/*" />
                         </div>
                       </div>
                     </div>
@@ -131,7 +131,7 @@
                     <div class="form-group row mb-4">
                       <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3"></label>
                       <div class="col-sm-12 col-md-7">
-                        <button class="btn btn-primary col-sm-12 col-md-12" onclick="buatProduk()">Simpan</button>
+                        <button class="btn btn-primary col-sm-12 col-md-12" id="btn-create-produk" onclick="buatProduk()">Simpan</button>
                       </div>
                     </div>
                   </div>
