--- a/pages/toko/produk-edit.html
+++ b/pages/toko/produk-edit.html
@@ -114,7 +114,7 @@
                       <div class="col-sm-12 col-md-7">
                         <div id="display-image"></div>
                         <div class="custom-file">
-                          <input type="file" name="gambar" class="custom-file-input" id="gambar" onchange="loadImage(event)">
+                          <input type="file" name="gambar" class="custom-file-input" id="gambar" onchange="loadImage(event)" accept="image/*">
                           <label class="custom-file-label">Choose File</label>
                         </div>
                       </div>
@@ -143,7 +143,7 @@
                     <div class="form-group row mb-4">
                       <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3"></label>
                       <div class="col-sm-12 col-md-7">
-                        <button class="btn btn-primary col-sm-12 col-md-12" onclick="ubahProduk()">Simpan</button>
+                        <button class="btn btn-primary col-sm-12 col-md-12" id="btn-update-produk" onclick="ubahProduk()">Perbarui</button>
                       </div>
                     </div>
                   </div>
