--- a/pages/toko/grupopsi-create.html
+++ b/pages/toko/grupopsi-create.html
@@ -62,6 +62,7 @@
                         <input type="text" class="form-control" id="deskripsi"/>
                       </div>
                     </div>
+                    <hr>
                     <div class="section-title mt-0">Opsi</div>
                     <div id="data-opsi">
                       
@@ -71,10 +72,11 @@
                         <button class="btn btn-sm btn-primary" onclick="tambahOpsi()"><i class="fas fa-plus"></i> Tambah Opsi</button>
                       </div>
                     </div>
+                    <hr>
 
                     <div class="row">
                       <div class="form-group col-md-4 col-6">
-                        <label class="col-form-label text-md-right">Pembeli harus mengisi opsi setidaknya 1?</label>
+                        <label class="col-form-label text-md-right">Wajib diisi?</label>
                         <div class="form-check">
                           <input class="form-check-input" type="checkbox" id="required">
                           <label class="form-check-label" for="defaultCheck1">
@@ -83,7 +85,7 @@
                         </div>
                       </div>
                       <div class="form-group col-md-6 col-6">
-                        <label class="col-form-label text-md-right">Pembeli dapat memberikan input lain diluar opsi?</label>
+                        <label class="col-form-label text-md-right">Customer dapat memberikan pilihan lain diluar opsi?</label>
                         <div class="form-check">
                           <input class="form-check-input" type="checkbox" id="spesificRequest">
                           <label class="form-check-label" for="defaultCheck1">
